fix(export): right align format trigger label

--- a/src/pages/ExportPage.scss
+++ b/src/pages/ExportPage.scss
@@ -2885,7 +2885,7 @@
 .dialog-format-trigger-label {
   flex: 1;
   min-width: 0;
-  text-align: left;
+  text-align: right;
 }
 
 .dialog-format-dropdown {
